@@ -6,16 +6,12 @@
  */
 import vialab.SMT.*;
 
-//set some configuration constants
-final boolean DRAW_TOUCH_POINTS=true;
-
 float xmag, ymag = 0;
 float newXmag, newYmag = 0; 
 
 void setup() {
   size(displayWidth, displayHeight, P3D);
   TouchClient.init(this, TouchSource.MOUSE);
-  TouchClient.setDrawTouchPoints(DRAW_TOUCH_POINTS,10);
   Zone z = new Zone("Z3D",400, 400, 400, 400);
   TouchClient.add(z);
   TouchClient.add(new Zone("Test",800,400,400,400));
