@@ -8,7 +8,6 @@ import vialab.SMT.*;
 void setup() {
   size(displayWidth, displayHeight, P3D);
   TouchClient.init(this, TouchSource.ANDROID);
-  TouchClient.setDrawTouchPoints(true,100);
 }
 
 void draw() {
