@@ -1,0 +1,5 @@
+package vialab.SMT;
+
+public enum TouchDraw{
+	NONE, DEBUG, SMOOTH;
+}
